[gd_scene load_steps=12 format=3 uid="uid://bqv3y51inp7pj"]

[ext_resource type="Script" uid="uid://ckhgejm1vx35w" path="res://src/Brick.gd" id="1_hwuoe"]
[ext_resource type="Script" uid="uid://bffar80lcasfa" path="res://addons/smoothing/smoothing.gd" id="2_evvpk"]
[ext_resource type="PackedScene" uid="uid://cxb1urtfd3en" path="res://data/scene/brick/BrickSynchronizer.tscn" id="2_nbvbe"]
[ext_resource type="PackedScene" uid="uid://cr4led0sdhtx7" path="res://data/scene/brick/BrickMultiplayerSpawner.tscn" id="2_yu5xo"]
[ext_resource type="PackedScene" uid="uid://bqu6sfv6my8qw" path="res://data/models/brick/brick.blend" id="3_4wdhu"]
[ext_resource type="PackedScene" uid="uid://dwfrmjgcn6sg3" path="res://data/scene/fire/Fire.tscn" id="3_i0dtf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_osnen"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b80at"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d6iny"]
size = Vector3(0.9, 0.9, 0.9)

[sub_resource type="BoxShape3D" id="BoxShape3D_mtstk"]
size = Vector3(1.4, 1.4, 1.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_w63pj"]
size = Vector3(1.3, 1.3, 1.3)

[node name="Brick" type="RigidBody3D"]
collision_mask = 3
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_osnen")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_hwuoe")

[node name="BrickMultiplayerSpawner" parent="." instance=ExtResource("2_yu5xo")]

[node name="BrickSynchronizer" parent="." instance=ExtResource("2_nbvbe")]

[node name="collider" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_b80at")

[node name="Smoothing" type="Node3D" parent="."]
script = ExtResource("2_evvpk")

[node name="model" parent="Smoothing" instance=ExtResource("3_4wdhu")]

[node name="IntersectDetector" type="Area3D" parent="."]
collision_mask = 3

[node name="collider" type="CollisionShape3D" parent="IntersectDetector"]
shape = SubResource("BoxShape3D_d6iny")

[node name="CameraMousePosInterceptor" type="StaticBody3D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="collider" type="CollisionShape3D" parent="CameraMousePosInterceptor"]
shape = SubResource("BoxShape3D_mtstk")
disabled = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_distance = 70.0
bus = &"SFX"

[node name="SoundExpiration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InactivityTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="JointDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
collision_mask = 3

[node name="collider" type="CollisionShape3D" parent="JointDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_w63pj")

[node name="Fire" parent="." instance=ExtResource("3_i0dtf")]
